Fix Collapse links in Option-set #1684
- also removed unnecessary 10px padding for colapsed option set

--- a/src/main/resources/assets/admin/common/styles/api/form/set/optionset/form-option-set-view.less
+++ b/src/main/resources/assets/admin/common/styles/api/form/set/optionset/form-option-set-view.less
@@ -34,10 +34,6 @@
         }
       }
 
-      &.collapsed {
-        padding-bottom: 10px;
-      }
-
       .form-option-set-option-view.invalid {
         > .help-text {
           padding-left: 10px;
